lagd analyse side

--- a/handlekurv.html
+++ b/handlekurv.html
@@ -28,6 +28,7 @@
                     <li><a href="index.html">Hjem</a></li>
                     <li><a href="produkt.html">Sneakers</a></li>
                     <li><a href="handlekurv.html">Handlekurv</a></li>
+                    <li><a href="analyse.html">Analyse</a></li>
                  </ul>
         </header>
             <main>
