--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li><a href="produkt.html">Dame</a></li>
                     <li><a href="#">Menn</a></li>
                     <li><a href="#">Barn</a></li>
+                    <li><a href="analyse.html">Analyse</a></li>
                  </ul>
                  <!--Liste som kommer opp istedenfor hamburgermenyen når du bruker desktopversjonen-->
                  <ul class="navbar-desktop">
