--- a/produkt.html
+++ b/produkt.html
@@ -37,6 +37,7 @@
                  <ul class="navbar2">
                     <li><a href="index.html">Hjem</a></li>
                     <li><a href="produkt.html">Sneakers</a></li>
+                    <li><a href="analyse.html">Analyse</a></li>
                  </ul>
             
             <!--Seksjon 1 for søkefelt-->
