--- a/analyse.html
+++ b/analyse.html
@@ -33,7 +33,40 @@
         </header>
         <main>
             <h1>Analyse</h1>
+            <section class="lighthouse">
+                <h2>SEO analyse</h2>
+                <img src="img/lighthouse_index.png" alt="Bilde for lighthouse av index siden">
+                <img src="img/lighthouse_index2.png" alt="Bilde for lighthouse av index siden">
+                <img src="img/lighthouse_handlekurv.png" alt="Bilde for lighthouse av handlekurv siden">
+                <img src="img/lighthouse_handlekurv2.png" alt="Bilde for lighthouse av handlekurv siden">
+                <img src="img/lighthouse_handlekurv3.png" alt="Bilde for lighthouse av handlekurv siden">
+            </section>
+            <section class="webaim">
+                <h2>UU analyse</h2>
+                <img src="img/webaim_index.png" alt="Bilde fra webaim av index siden">
+                <img src="img/webaim_handlekurv.png" alt="Bilde fra webaim av handlekurv siden">
+                <img src="img/webaim_produkter.png" alt="Bilde fra webaim av produkt siden">
+            </section>
 
+            <section class="tabell">
+                <table width="100%">
+                    <tr>
+                      <th  width="33%" class="tabell">ChatGPT</th>
+                      <th  width="33%" class="tabell">Lighthouse</th>
+                      <th  width="33%" class="tabell">Webaim</th>
+                    </tr>
+                    <tr>
+                      <td class="tabell">Alfreds Futterkiste</td>
+                      <td class="tabell">Maria Anders</td>
+                      <td class="tabell">Germany</td>
+                    </tr>
+                    <tr>
+                      <td class="tabell">Centro comercial Moctezuma</td>
+                      <td class="tabell">Francisco Chang</td>
+                      <td class="tabell">Mexico</td>
+                    </tr>
+                  </table>
+            </section>
         </main>
         <footer>
             <ul id="social-icons">
