--- a/handlekurv.html
+++ b/handlekurv.html
@@ -12,6 +12,7 @@
         <title>Forside FLIP</title>
     </head>
     <body>
+        <a href="#main-content" class="skip-to-content">Skip to content</a>
         <div id="grid-container">
         <header>
             <nav>
@@ -19,7 +20,7 @@
                 <a href="index.html" id="logo">FLIP</a>
                  <div>
                     <i id="heart" class="fa-regular fa-heart"></i>
-                    <a href="handlekurv.html"><i  id="shopping-cart" class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="handlekurv.html" title="handlekurv"><i  id="shopping-cart" class="fa-solid fa-cart-shopping"></i></a>
                     <i id="user" class="fa-regular fa-user"></i>
                  </div>
             </nav>
@@ -31,6 +32,8 @@
                     <li><a href="analyse.html">Analyse</a></li>
                  </ul>
         </header>
+        <main class="front-page" id="main-content">
+
             <main>
                 <h1>HANDLEKURV (2 varer)</h1>
                 <!--Seksjon for skoene i handlekurven-->
