skrevet analyse,meta

--- a/handlekurv.html
+++ b/handlekurv.html
@@ -4,6 +4,13 @@
         <!--Brukt kode som Ann-Charlott Beatrice Karlsen har vist i forelesninger-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <!--Meta-tags-->
+        <meta property="og:url" content="https://itstud.hiof.no/~miname/oblig_3/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="FLIP" />
+        <meta property="og:description" content="How much does culture influence creative thinking?" />
+        <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+        
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawesome.css" rel="stylesheet">
         <link href="css/font/css/brands.css" rel="stylesheet">
