--- a/produkt.html
+++ b/produkt.html
@@ -4,6 +4,13 @@
         <!--Brukt kode som Ann-Charlott Beatrice Karlsen har vist i forelesninger-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <!--Meta-tags-->
+        <meta property="og:url" content="https://itstud.hiof.no/~miname/oblig_3/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="FLIP" />
+        <meta property="og:description" content="Website for women shoes." />
+        <meta property="og:image" content="https://img01.ztat.net/article/spp-media-p1/f4440c19585041859ab2114f0cd8ec2f/46b9a234226f4766b677b921baa352a3.jpg?imwidth=1800&filter=packshot" />
+
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawesome.css" rel="stylesheet">
         <link href="css/font/css/brands.css" rel="stylesheet">
