--- a/handlekurv.html
+++ b/handlekurv.html
@@ -8,9 +8,9 @@
         <meta property="og:url" content="https://itstud.hiof.no/~miname/oblig_3/" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="FLIP" />
-        <meta property="og:description" content="How much does culture influence creative thinking?" />
-        <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
-        
+        <meta property="og:description" content="Website for women shoes." />
+        <meta property="og:image" content="https://img01.ztat.net/article/spp-media-p1/f4440c19585041859ab2114f0cd8ec2f/46b9a234226f4766b677b921baa352a3.jpg?imwidth=1800&filter=packshot" />
+
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawesome.css" rel="stylesheet">
         <link href="css/font/css/brands.css" rel="stylesheet">
@@ -32,7 +32,7 @@
                  </div>
             </nav>
                  <hr class="strek">
-                 <ul class="navbar">
+                 <ul class="navbar" role="navigation"> <!--ARIA-attributter-->
                     <li><a href="index.html">Hjem</a></li>
                     <li><a href="produkt.html">Sneakers</a></li>
                     <li><a href="handlekurv.html">Handlekurv</a></li>
@@ -41,7 +41,7 @@
         </header>
         <main class="front-page" id="main-content">
 
-            <main>
+            <main role="main"> <!--ARIA-attributter-->
                 <h1>HANDLEKURV (2 varer)</h1>
                 <!--Seksjon for skoene i handlekurven-->
                 <section class="handlekurv-flex">
@@ -111,7 +111,7 @@
                     </section>
                 </section>
             </main>
-            <footer>
+            <footer role="contentinfo"> <!--ARIA-attributter-->
                 <ul id="social-icons">
                     <li id="instagram" class="fa-brands fa-instagram"></li>
                     <li id="facebook" class="fa-brands fa-square-facebook"></li>
